--- a/app/views/pages/page_500.html.erb
+++ b/app/views/pages/page_500.html.erb
@@ -5,8 +5,8 @@
 <div id="main" class="main pb-80">
   <div class="container">
     <div class="columns">
-      <div class="column col-6 col-xs-10 col-mx-auto">
-        <img class="error-img" src="<%= asset_url('500.png') %>" alt="500 image">
+      <div class="column col-lg-10 col-mx-auto">
+        <img class="error-img centered" src="<%= asset_url('500.png') %>" alt="500 image">
       </div>
       <div class="column col-10 col-mx-auto">
         <div class="error-content text-center">
