remove col spectre

--- a/app/views/pages/top.html.erb
+++ b/app/views/pages/top.html.erb
@@ -5,8 +5,8 @@
 <div id="main" class="main main-mt-0">
   <div class="hero bg-linear-blue">
     <div class="container">
-      <div class="columns hero-content">
-        <div class="column col-6 col-md-8 col-sm-12 col-mx-auto hero-introduction">
+      <div class="hero-content">
+        <div class="hero-introduction">
           <div class="hero-introduction-text">
             <h1 class="hero-title">Difficult to manage employee attendance ?</h1>
             <p>Our Punch is here to help making it as easy as ever with our managing solution.</p>
@@ -16,7 +16,7 @@
             </div>
           </div>
         </div>
-        <div class="column col-6 col-md-8 col-sm-12 col-mx-auto hero-img">
+        <div class="hero-img">
           <img src="<%= asset_url('img_hero_01.png') %>" alt="">
         </div>
       </div>
