--- a/app/assets/stylesheets/modules/_navbar.scss
+++ b/app/assets/stylesheets/modules/_navbar.scss
@@ -1,9 +1,8 @@
 body.menu-opened {
-  .main {
-    overflow: hidden;
-  }
+  overflow: hidden;
+  position: relative;
 
-  .nav::before {
+  &::before {
     @include respond-to-mobile() {
       background-color: rgba($black-color, .5);
       content: '';
@@ -11,8 +10,8 @@ body.menu-opened {
       height: 100%;
       left: 0;
       min-height: 100vh;
-      position: absolute;
-      top: 19.2rem;
+      position: fixed;
+      top: 0;
       transition: all .3s ease-in-out;
       width: 100%;
       z-index: 10;
