--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -7,9 +7,13 @@ $screen-xs-mobile: 375px !default;
 
 // Color
 $primary-color: #439aff;
+$primary-color-dark: #234fff;
 $black-color: #000;
-$primary-color-dark: #234FFF;
+$black-color-truly: #363636;
+$red-color: #fc4e5c;
+$red-color-lightest: #ffe7e7;
 $color-blue-lightest: #fafcff;
+$color-true-gray: #abb2b6;
 $color-gray-lightest: #f0f3f7;
 $color-darker: #2e3e48;
 $color-dark-lightest: #6c777e;
