--- a/app/assets/stylesheets/modules/_typography.scss
+++ b/app/assets/stylesheets/modules/_typography.scss
@@ -3,7 +3,7 @@ h2,
 h3,
 h4,
 h5 {
-  color: $color-darker
+  color: $color-darker;
 }
 
 h1,
@@ -16,7 +16,7 @@ h1 {
 }
 
 h2 {
-  line-height: 1.25
+  line-height: 1.25;
 }
 
 h3 {
