--- a/app/assets/stylesheets/modules/_cards.scss
+++ b/app/assets/stylesheets/modules/_cards.scss
@@ -17,7 +17,7 @@
   &.card-comment {
     width: calc(33.3333% - .8rem);
     background: $light-color;
-    box-shadow: 0 .25rem 1.5rem 0 rgba(0,0,0,0.05);
+    box-shadow: 0 .25rem 1.5rem 0 rgba(0, 0, 0, .05);
     border-radius: .2rem;
     padding: 1.2rem 1.6rem;
     margin-bottom: 0;
