--- a/app/assets/stylesheets/modules/_error_pages.scss
+++ b/app/assets/stylesheets/modules/_error_pages.scss
@@ -1,8 +1,8 @@
 .error-img {
   margin-top: 2.4rem;
-  width: 600px;
+  width: 30rem;
 
-  @include respond-to-mobile(){
+  @include respond-to-mobile() {
     width: 100%;
   };
 }
@@ -13,12 +13,12 @@
   &-title {
     margin: 0;
     font-size: 1.6rem;
-    color: #363636;
+    color: $black-color-truly;
   }
 
   &-subtitle {
-    margin: 0.8rem 0;
-    font-size: 0.8rem;
-    color: #6c777e;
+    margin: .8rem 0;
+    font-size: .8rem;
+    color: $color-dark-lightest;
   }
 }
