--- a/app/views/auth/new.html.erb
+++ b/app/views/auth/new.html.erb
@@ -20,7 +20,7 @@
           <%= f.password_field :password, class: 'form-input', placeholder: t('auth.new.password') %>
         </div>
         <div class="form-group">
-          <%= f.submit t('auth.new.sign_in'), class: 'btn btn-primary btn-block' %>
+          <%= f.submit t('auth.new.sign_in'), class: 'btn btn-block' %>
         </div>
         <div class="form-group text-center">
           <%= link_to t('auth.new.forgot_password'), password_reset_url %>
