change font size at least 16px

--- a/app/assets/stylesheets/modules/_cards.scss
+++ b/app/assets/stylesheets/modules/_cards.scss
@@ -9,7 +9,7 @@
   }
 
   .card-body {
-    font-size: .7rem;
+    font-size: $font-size-lg;
     margin-bottom: .6rem;
     color: $color-dark-lightest;
   }
