--- a/app/assets/stylesheets/modules/_tiles.scss
+++ b/app/assets/stylesheets/modules/_tiles.scss
@@ -14,7 +14,7 @@
     margin-bottom: 0;
 
     + p {
-      font-size: 15px;
+      font-size: $font-size-lg;
       line-height: 1.1333;
       color: $primary-color;
       margin-bottom: 0;
