--- a/app/assets/stylesheets/modules/_features.scss
+++ b/app/assets/stylesheets/modules/_features.scss
@@ -8,7 +8,7 @@
   padding-top: 3.6rem;
 
   p {
-    font-size: 16px;
+    font-size: $font-size-lg;
     line-height: 1.5;
   }
 
@@ -37,7 +37,7 @@
       @include respond-to-smaller-tablet() {
         width: 100%;
         margin-top: 2rem;
-        font-size: .4rem;
+        font-size: $font-size-lg;
       }
 
       svg {
@@ -53,7 +53,7 @@
         margin-bottom: .15rem;
 
         @include respond-to-smaller-tablet() {
-          font-size: .8rem;
+          font-size: $font-size-lg;
         }
       }
     }
