--- a/app/assets/stylesheets/modules/_scroller.scss
+++ b/app/assets/stylesheets/modules/_scroller.scss
@@ -2,7 +2,7 @@
   .scroller-title {
     text-align: center;
     margin: 0;
-    font-size: 14px;
+    font-size: $font-size-lg;
     color: $color-dark-lightest;
   }
 
