--- a/app/assets/stylesheets/modules/_login.scss
+++ b/app/assets/stylesheets/modules/_login.scss
@@ -1,5 +1,5 @@
 .auth-form {
-  margin-top: 3.2rem;
+  margin-top: 2.8rem;
   width: 20rem;
 
   @include respond-to-mobile() {
@@ -16,7 +16,7 @@
     background-color: $light-color;
 
     &-header {
-      padding: 2rem 1.6rem 0;
+      padding: 1.2rem 1.2rem 0;
 
       @include respond-to-mobile() {
         padding: 1rem .8rem 0;
@@ -28,7 +28,7 @@
     }
 
     &-body {
-      padding: 0 1.6rem 2rem;
+      padding: 0 1.2rem 1.2rem;
 
       @include respond-to-mobile() {
         padding: 0 .8rem 1rem;
@@ -45,8 +45,7 @@
       border-color: $red-color;
 
       @include respond-to-mobile() {
-        margin-left: .8rem;
-        width: calc(100% - 1.6rem);
+        margin: 0 .8rem;
       }
     }
   }
@@ -57,8 +56,8 @@
 }
 
 .auth-footer {
-  margin-top: 2.8rem;
-  margin-bottom: 2.8rem;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
   width: 100%;
 
   @include respond-to-mobile() {
@@ -67,20 +66,18 @@
   }
 
   a {
-    margin-left: .8rem;
-    margin-right: .8rem;
+    margin: 0 .8rem;
     color: $color-true-gray;
 
     @include respond-to-mobile() {
-      margin-left: .4rem;
-      margin-right: .4rem;
+      margin: 0 .4rem;
     }
   }
 }
 
 .punch-logo {
   width: 12.5rem;
-  margin-top: 3.2rem;
+  margin-top: 2.8rem;
 
   @include respond-to-mobile() {
     width: 7.5rem;
