--- a/app/views/shared/_auth_footer.html.erb
+++ b/app/views/shared/_auth_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="auth-footer text-center">
-  <a href="#">About</a>
-  <a href="#">Contact Us</a>
-  <a href="#">Terms</a>
-  <a href="#">Privacy</a>
+  <a href="<%= help_url %>">Help</a>
+  <a href="mailto:1pac.info@1pac.vn">Contact Us</a>
+  <a href="<%= terms_url %>">Terms</a>
+  <a href="<%= privacy_url %>">Privacy</a>
 </div>
