--- a/app/views/auth/new.html.erb
+++ b/app/views/auth/new.html.erb
@@ -1,3 +1,19 @@
+<%= provide(:page_title, 'Home | Punch') %>
+<%= provide(:page_description, 'Punch description') %>
+<%= provide(:page_url, login_url) %>
+
+<% content_for(:meta) do %>
+<meta name="robots" content="noindex,nofollow">
+<% end %>
+
+<% content_for(:header) do %>
+<%= render 'shared/auth_header' %>
+<% end %>
+
+<% content_for(:footer) do %>
+<%= render 'shared/auth_footer' %>
+<% end %>
+
 <div class="auth-form centered">
   <%= render('shared/flash', type: 'error', message: flash[:alert], btn_clear_opened: true) if flash[:alert] %>
   <%= render('shared/flash', type: 'success', message: flash[:notice]) if flash[:notice] %>
