--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -5,20 +5,27 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width">
+<meta name="referrer" content="origin-when-cross-origin">
 
-<title>Punch</title>
-<meta name="description" content="Punch description">
+<title><%= yield(:page_title) %></title>
+<meta name="description" content="<%= yield(:page_description) %>">
 
-<link rel="canonical" href="<%= root_url %>">
+<link rel="canonical" href="<%= yield(:page_url) %>">
 
-<meta property="og:title" content="Punch">
-<meta property="og:site_name" content="Punch">
-<meta property="og:description" content="Punch description">
-<meta property="og:url" content="root_url">
+<%= yield(:meta) if content_for?(:meta) %>
+
+<meta name="twitter:site" content="<%= yield(:page_title) %>">
+<meta name="twitter:title" content="<%= yield(:page_title) %>">
+<meta name="twitter:description" content="<%= yield(:page_description) %>">
+<meta name="twitter:image:src" content="<%= asset_url('og.png') %>">
+<meta name="twitter:card" content="summary">
+
+<meta property="og:title" content="<%= yield(:page_title) %>">
+<meta property="og:site_name" content="<%= yield(:page_title) %>">
+<meta property="og:description" content="<%= yield(:page_description) %>">
+<meta property="og:url" content="<%= yield(:page_url) %>">
 <meta property="og:image" content="<%= asset_url('og.png') %>">
 <meta property="og:type" content="website">
-
-<link rel="dns-prefetch" href="">
 
 <link rel="shortcut icon" type="image/x-icon" href="<%= asset_url('favicon.ico') %>">
 <link rel="apple-touch-icon" sizes="180x180" href="<%= asset_url('icon_180x180.png') %>">
@@ -30,13 +37,16 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 
 <%= stylesheet_link_tag('application', media: 'all') %>
+<script>
+window.LANG = '<%= I18n.locale %>'
+</script>
 </head>
 
 <body class="bg-gray">
 
 <%= yield(:header) %>
 <%= yield %>
-<%= render 'shared/footer' %>
+<%= yield(:footer) %>
 
 <%= javascript_include_tag('application') %>
 </body>
