--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,6 +1,15 @@
+<%= provide(:page_title, 'Punch') %>
+<%= provide(:page_description, 'Punch description') %>
+<%= provide(:page_url, help_url) %>
+
 <% content_for(:header) do %>
-<%= render 'shared/index-header' %>
+<%= render 'shared/top_header' %>
 <% end %>
+
+<% content_for(:footer) do %>
+<%= render 'shared/footer' %>
+<% end %>
+
 <section class="section-mh bg-linear-blue">
   <h1>Coming Soon!</h1>
 </section>
