--- a/app/views/pages/page_404.html.erb
+++ b/app/views/pages/page_404.html.erb
@@ -1,3 +1,7 @@
+<%= provide(:page_title, '404 not found') %>
+<%= provide(:page_description, 'Punch description') %>
+<%= provide(:page_url, root_url) %>
+
 <% content_for(:header) do %>
 <%= render 'shared/header' %>
 <% end %>
