--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -1,5 +1,13 @@
+<%= provide(:page_title, 'Punch') %>
+<%= provide(:page_description, 'Punch description') %>
+<%= provide(:page_url, terms_url) %>
+
 <% content_for(:header) do %>
 <%= render 'shared/header' %>
+<% end %>
+
+<% content_for(:footer) do %>
+<%= render 'shared/footer' %>
 <% end %>
 
 <div id="main" class="main">
