--- a/app/views/password_reset/edit.html.erb
+++ b/app/views/password_reset/edit.html.erb
@@ -1,3 +1,19 @@
+<%= provide(:page_title, 'Home | Punch') %>
+<%= provide(:page_description, 'Punch description') %>
+<%= provide(:page_url, edit_password_reset(params[:token])) %>
+
+<% content_for(:meta) do %>
+<meta name="robots" content="noindex,nofollow">
+<% end %>
+
+<% content_for(:header) do %>
+<%= render 'shared/auth_header' %>
+<% end %>
+
+<% content_for(:footer) do %>
+<%= render 'shared/auth_footer' %>
+<% end %>
+
 <div class="auth-form centered">
   <div class="panel">
     <div class="panel-header text-center">
