--- a/app/views/shared/_top_header.html.erb
+++ b/app/views/shared/_top_header.html.erb
@@ -21,8 +21,8 @@
         </div>
         <ul class="navbar-utilities">
           <li><%= link_to "Features", features_path, class: "navbar-link" %></li>
-          <li><%= link_to "Documentation", help_path, class: "navbar-link" %></li>
-          <li><a href="#" class="navbar-link">Contact us</a></li>
+          <li><%= link_to "Help", help_path, class: "navbar-link" %></li>
+          <li><a href="mailto:1pac.info@1pac.vn" class="navbar-link">Contact us</a></li>
         </ul>
         <btn class="btn btn-signin navbar-link">Sign In</btn>
       </div>
