--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -12,7 +12,7 @@
       <section class="navbar-center">
         <p>© 2018 - 1PAC Vietnam Co., LTD</p>
       </section>
-      <section class="navbar-section">
+      <!-- <section class="navbar-section">
         <div class="language-switcher">
           <label for="language-switcher-box" class="language-switcher-label">Languages: </label>
           <select id="language-switcher-box" class="language-switcher-box">
@@ -20,7 +20,7 @@
             <option value="jp">日本語</option>
           </select>
         </div>
-      </section>
+      </section> -->
     </div>
   </div>
 </footer>
