--- a/app/views/shared/_top_header.html.erb
+++ b/app/views/shared/_top_header.html.erb
@@ -14,9 +14,9 @@
           <span class="close float-right"></span>
           <p class="text-bold">Please enter your company's namespace</p>
           <div class="input-group">
-            <input type="text" placeholder="your-company-namespace" class="form-input">
+            <input type="text" placeholder="your-company-namespace" class="form-input namespace-input">
             <span>.punch.com</span>
-            <button class="btn btn-primary">Go</button>
+            <button class="btn btn-primary btn-submit">Go</button>
           </div>
         </div>
         <ul class="navbar-utilities">
