--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,8 +5,8 @@
         <%= link_to root_path do %>
           <div class="navbar-logo"></div>
         <% end %>
-        <button type="button" class="menu-burger">
-          <svg fill="currentColor" fill-rule="evenodd" width="22px" height="22px" viewBox="0 0 22 22" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M0,17 L24,17 L24,20 L0,20 L0,17 Z M0,10 L24,10 L24,13 L0,13 L0,10 Z M4,3 L24,3 L24,6 L4,6 L4,3 Z" id="path-1"></path></svg>
+        <button class="btn menu-burger">
+          <svg fill="currentColor" width="22px" height="22px" viewBox="0 0 22 22" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M0,17 L24,17 L24,20 L0,20 L0,17 Z M0,10 L24,10 L24,13 L0,13 L0,10 Z M4,3 L24,3 L24,6 L4,6 L4,3 Z" id="path-1"></path></svg>
         </button>
       </div>
       <div class="navbar-section navbar-menu">
@@ -22,10 +22,9 @@
         <ul class="navbar-utilities">
           <li><%= link_to "Features", features_path, class: "navbar-link" %></li>
           <li><%= link_to "Help", help_path, class: "navbar-link" %></li>
-          <li><a href="#" class="navbar-link">Contact us</a></li>
-
+          <li><a href="mailto:1pac.info@1pac.vn" class="navbar-link">Contact us</a></li>
         </ul>
-        <button type="button" class="btn btn-signin navbar-link">Sign In</button>
+        <button class="btn btn-signin navbar-link">Sign In</button>
       </div>
     </div>
   </div>
