Improve table ui

--- a/frontend/src/scss/_tables.scss
+++ b/frontend/src/scss/_tables.scss
@@ -7,8 +7,16 @@
     width: 140px;
   }
 
+  .w-cell-kind {
+    width: 77px;
+  }
+
   .w-cell-date {
-    width: 70px;
+    width: 93px;
+  }
+
+  .w-cell-status {
+    width: 95px;
   }
 
   .w-cell-admin {
