Improve code a bit

--- a/app/assets/stylesheets/modules/_utilities.scss
+++ b/app/assets/stylesheets/modules/_utilities.scss
@@ -58,10 +58,16 @@
   padding-bottom: 4rem;
 }
 
-.mt-64 {
-  margin-top: 3.2rem;
-}
-
 .mt-40 {
   margin-top: 2rem;
+}
+
+.pt-40 {
+  padding-top: 2rem;
+}
+
+.img-error {
+  width: 600px;
+  max-width: 100%;
+  margin-bottom: 1rem;
 }
