Call ajax on header

--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -18,6 +18,7 @@ $color-gray-lightest: #f0f3f7;
 $color-darker: #2e3e48;
 $color-dark-lightest: #6c777e;
 $color-brand: #abb2b6;
+$color-error: #fc4e5c;
 
 $header-border-color: #e0e0e0;
 $border-color: #e3e3e7;
