--- a/app/assets/stylesheets/modules/_utilities.scss
+++ b/app/assets/stylesheets/modules/_utilities.scss
@@ -70,6 +70,11 @@
   padding-top: 2rem;
 }
 
+.text-error {
+  color: $color-error;
+  display: none;
+}
+
 .img-error {
   width: 600px;
   max-width: 100%;
