--- a/app/views/shared/_top_header.html.erb
+++ b/app/views/shared/_top_header.html.erb
@@ -18,6 +18,7 @@
             <span>.punch.com</span>
             <button class="btn btn-primary btn-submit">Go</button>
           </div>
+          <span class="text-error mt-8">Company namespace is not found</span>
         </div>
         <ul class="navbar-utilities">
           <li><%= link_to "Features", features_path, class: "navbar-link" %></li>
